--- a/Pipfile
+++ b/Pipfile
@@ -23,6 +23,8 @@ ipython = "*"
 redis = "*"
 hiredis = "*"
 django-mysql = "*"
+gunicorn = "*"
+sentry-sdk = "==0.11.1"
 
 [requires]
 python_version = "3.7"
