--- a/docker/Dockerfile.v8
+++ b/docker/Dockerfile.v8
@@ -29,14 +29,17 @@ COPY Pipfile .
 COPY Pipfile.lock .
 RUN pipenv install --system && apk del .build-deps
 COPY blog .
-COPY docker/start.sh .
+#COPY docker/start.sh .
 COPY docker/uwsgi.ini .
 COPY docker/default.conf /etc/nginx/conf.d/default.conf
 
 
 
+EXPOSE 8000
 EXPOSE 80
 
-ENTRYPOINT ["sh", "start.sh" ]
+ENTRYPOINT nginx && gunicorn blog.wsgi -b 0.0.0.0:8000
+
+# ENTRYPOINT ["sh", "start.sh" ]
 
 #ENTRYPOINT [ "pipenv","run","blog/manage.py","runserver","0.0.0.0:5000" ]
