--- a/docker/Dockerfile.v8
+++ b/docker/Dockerfile.v8
@@ -33,6 +33,11 @@ COPY blog .
 COPY docker/uwsgi.ini .
 COPY docker/default.conf /etc/nginx/conf.d/default.conf
 
+ARG version='none'
+ARG date="none"
+
+ENV VERSION=${version}
+ENV RELASE_DATETIME=${date}
 
 
 EXPOSE 8000
